test/programs/invalid_programs/methods/missing_overload.jm
#!TypeError

def foo(i:Int)
  puts(i)
end

foo()
